2000-07-07  Michael Yount <csf@moscow.com>

	* lib/Mj/Parser (parse_args):   Deal with attachments.  If a command 
	accepts here arguments and is iterated,  set the appropriate request
	variable to the attachment file handle.  Otherwise, read
	the data from the file handle into the argument array.
	(Only the post and put commands will use the file handle.)

2000-07-03  Michael Yount <csf@moscow.com>

	* bin/mj_confirm:  Include domain in HTML form (from Olivier Prenant).
	Use Format to present output of sessioninfo.
	Show the expiration date of a token.

2000-07-01  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/BounceParser.pm (parse_lotus): Would accept an all-blank
	bounce.
	(parse_softswitch): Would accept an all-blank bounce.

2000-07-01  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm: (archive_chunk)  Use existing
    Mj::List routines to retrieve messages in 'immediate' mode.

2000-06-30  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm: Formatting rewrite; override Mj::Format 
	routines for the showtokens, tokeninfo, and who commands.

	* lib/Majordomo.pm:
	(faq_start, info_start, intro_start) Remove temporary files.
	(createlist) Use "newlist" variable instead of "list."
    (sessioninfo) Rename to sessioninfo_start.  Treat
	sessioninfo as an iterated core routine.
    (showtokens) Allow tokens shown to be limited to a
	particular command.  Include the size of the spool
	file in the output for posted messages.

2000-06-27  Michael Yount <csf@moscow.com>

	Use new core function calling conventions.

2000-06-26  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (createlist): Return values were done
	improperly for some reason.

	* lib/Mj/BounceParser.pm: Renamed from Bf/Parser.pm.

2000-06-25  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/List.pm (bounce_gen_stats): Fixed calculation of overload
	stats.

	* Rotated old ChangeLog entries.
